# infra

./: .gitignore  README.md
.github/workflows/: discord-archive.yaml  publish.yaml
discord-bot/: README.md  discord-archive.cabal  flake.nix  register-command.sh
discord-bot/src/: Cluster.hs  Discord.hs  Gemini.hs  Main.hs  MessageLink.hs
discord-bot/test/: Spec.hs
discord-bot/worker/: .gitignore  Cargo.toml  wrangler.toml
discord-bot/worker/src/: lib.rs
docs/plans/: 2026-03-05-discord-archive-bot-design.md  2026-03-05-discord-archive-bot-implementation.md  2026-03-05-nixoskr-emanote-implementation.md  2026-03-05-nixoskr-emanote-knowledge-base-design.md
nixos.kr/: .env.example  CONTRIBUTING.md  README.md  flake.nix  port-forward.nix  static-web-server.nix
nixos.kr/dns/: .gitignore  README.md  main.tf  terraform.tfvars.example
nixos.kr/global/: CNAME
nixos.kr/ko/: faq.md  index.md  index.yaml  start.md  topics.md
nixos.kr/ko/faq/: flake-lock-conflict.md  slow-build.md  unfree-package.md
nixos.kr/ko/start/: first-flake.md  first-shell.md  install-nix.md
nixos.kr/ko/topics/: flakes.md  home-manager.md
