[package]
name = "discord-archive-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-compact = "2"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
